@@ -1,3 +1,10 @@
+2004-01-14  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
+
+	* acinclude.m4: Quote names of macros to be defined by AC_DEFUN
+	throughout.
+	* aclocal.m4: Regenerate.
+	* configure: Regenerate.
+
 2003-10-14  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* gettext.m4: Properly quote arguments to AC_DEFUN.
